# ai-resume-builder

./: .gitignore  CLAUDE.md  CONVERSATION_FIX.md  DEPLOYMENT_GUIDE.md  FASTAPI_SETUP.md  MULTI_USER_SUMMARY.md  NEW_GRAPH_STRUCTURE.md  NEXTJS_SETUP.md  QUICK_START.md  README.md  capture_logs.py  debug_ats.txt  debug_generate.txt  final_test.py  issues.txt  langgraph.json  package.json  pnpm-lock.yaml  pyproject.toml  recent_logs.txt  resume_builder_checkpoints.db-shm  resume_builder_checkpoints.db-wal  test_auth.py  test_explanation.py  test_flow.py  test_full_flow.py  test_graph.py  test_latex_compile.py  test_page_validation.py
app/builder/: page.tsx
app/dashboard/: page.tsx
contexts/: AuthContext.tsx
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/builder/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: Navbar.tsx
src/api/: __init__.py  dependencies.py  main.py  password_utils.py
src/api/routers/: auth.py  chat.py  resumes.py
src/resume_agent/: __init__.py  auth.py  config.py  database.py  file_parser.py  graph.py  init_db.py  latex_service.py  models.py  nodes.py  nodes_old_backup.py  schemas.py  state.py  studio_config.py  user_service.py
templates/: resume_template.tex
v0 design/: CLAUDE.md  MULTI_USER_SUMMARY.md  NEW_GRAPH_STRUCTURE.md  QUICK_START.md  langgraph.json  package.json  pnpm-lock.yaml
v0 design/app/: layout.tsx  page.tsx
v0 design/frontend/: README.md  package-lock.json
(+20 files in other folders)
